--- a/index.html
+++ b/index.html
@@ -65,14 +65,9 @@
 
 
 
-
-
-
-
-
      <!-- some facts -->
       <section class="some-facts">
-        <h3 class="section-title">Some Facts</h3>
+        <h3 class="section-title facts-title">Some Facts</h3>
         <p class="text-light-gray fact-description ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
         <div class="facts-container">
           <!-- .fact-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
@@ -106,6 +101,23 @@
           </div>
         </div>
       </section>
+
+      <!-- our sponsors -->
+       <section class="our-sponsors">
+        <div class="sponsor-info">
+          <h3 class="section-title">Our Sponsors</h3>
+          <div class="text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+          </div>
+        </div>
+        <div class="sponsor-companies">
+          <img src="images/sponsors/spotify.png" alt="sponsor logo">
+          <img src="images/sponsors/google.png" alt="sponsor logo">
+          <img src="images/sponsors/amazon.png" alt="sponsor logo">
+          <img src="images/sponsors/telerama.png" alt="sponsor logo">
+          <img src="images/sponsors/figma.png" alt="sponsor logo">
+        </div>
+       </section>
   </main>
   <footer></footer>
 </body>
