--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
            </div>
 
       </div>
-      <div>
+      <div class="featured-architect">
         <img src="./images/architect.png" alt="">
         <button id="experience-badge" class="btn-primary">
-          <span id="experience-year">10+ Year</span>
+          <span id="experience-year">10+Year</span>
           <br>
           <span>experience</span>
         </button>
@@ -164,7 +164,13 @@
         </div>
        </section>
   </main>
-  <footer></footer>
+  <footer>
+    <section>
+      <div class="footer-container">
+        <p class="text-light-gray">All rights reserved copyright@2023 startup landing page design</p>
+      </div>
+    </section>
+  </footer>
 </body>
 
 </html>
